Fixed text overflow bug
fixes #61

--- a/myapp/static/myapp/css/main.css
+++ b/myapp/static/myapp/css/main.css
@@ -601,7 +601,7 @@ input:-webkit-autofill {
   position: absolute;
   margin-left: 0;
   min-width: 100%;
-  min-height: 12em;
+  min-height: 100%;
   z-index: -1;
   opacity: 0.4;
   background-color: #343a40;
